feat: add budget and category.
